--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body{
-    background-color: whitesmoke;
+    background-color: rgb(148, 227, 241);
 }
 
 h1{
@@ -9,17 +9,32 @@ h1{
     color:rgb(11, 25, 156);
     background-color: beige;
     font-family:Verdana, Geneva, Tahoma, sans-serif; 
+    border-style:inset;
+    border-color:purple;
+    border: width 1px;
 }
-
 h2{
     text-align: center;
     font-size:xx-large;
     font-weight: 600;
-    color: rgb(3, 3, 75);
+    color: rgb(137, 137, 182);
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
 img{
     width: 230px;
     height: 300px;
+}
+h2{
+    text-align: left;
+    font-family: 'Times New Roman', Times, serif;
+    border-style:solid;
+    border-color: black;
+    border-width: 1px;
+    width: 1000px;
+}
+h4{
+    text-align:left;
+    font-size: small;
+    color:rgb(99, 42, 165);
+    font-family: Tahoma, Geneva, Verdana, sans-serif;
 }
